syntax = "proto3";

package userproto;


message TOKEN {
   string token = 1;
}

message USERNAME {
   string username = 1;
}

message VALID {
   bool isValid = 1;
}


message REGISTER {
   string username = 1;
   string fullname = 2;
   string password = 3;
}

message LOGIN {
   string username = 1;
   string password = 2;
}

message USER {
   string username = 1;
   string fullname = 2;
}

message CHECKACCESSTOKEN {
   string username = 1;
   string token = 2;
}



service UserService {
  rpc Register(REGISTER) returns (USER);
  rpc SignIn(LOGIN) returns (VALID);

  rpc GetUsers() returns (USER);

  rpc CheckUserNameExists(USERNAME) returns (VALID);
  rpc GenerateAccessToken(USERNAME) returns (TOKEN);
  rpc CheckAccessTokenValid(CHECKACCESSTOKEN) returns (VALID);
}
